@@ -1,3 +1,8 @@
+2014-10-09  David B. Lamkins  <david@lamkins.net>
+
+	* menu.c (names_search, open_object_cb): Implement substring
+	search in Open Object dialog.
+
 2014-10-08  David B. Lamkins  <david@lamkins.net>
 
 	* help.h (): Factor out help menu.
